Fix stretch

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -87,7 +87,7 @@
 		background-color: #ffffff;
 		background-image: url("../../images/bg.png");
 		background-repeat: no-repeat;
-		background-size: 100%, cover;
+		background-size: 100%, 100%;
 	}
 
 		body:after {
@@ -108,7 +108,7 @@
 			/*background-repeat: no-repeat;,			no-repeat;
 			background-size: 100px 100px, cover;*/
 			background-repeat: no-repeat;
-			background-size: 100%, cover;
+			background-size: 100%, 100%;
 			background-position: top left,		center center;
 			-moz-transition: opacity 1.75s ease-out;
 			-webkit-transition: opacity 1.75s ease-out;
